enviroment defenitions basic implimentation of auth container improved exporting of Private container added new functionalities to auth provider auth provider saga implimented better export for auth saga request utils functions

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,3 +1,13 @@
 {
-  "title": "welcome"
+  "authPage": {
+    "header": "DASHBOARD",
+    "rememberCheckBox": "remember me",
+    "signIn": "Sign In",
+    "help": "Help text",
+    "facebook": "Login with facebook",
+    "google": "Login with google",
+    "auth0": "Login with auth0",
+    "forgotPass": "restore password",
+    "createAcc": "create a new accout"
+  }
 }
