added missing strings to translations files changed input type for auth password filed

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -12,7 +12,9 @@
     "google": "Login with google",
     "auth0": "Login with auth0",
     "forgotPass": "restore password",
-    "createAcc": "create a new accout"
+    "createAcc": "create a new accout",
+    "username": "username",
+    "password": "password"
   },
   "pages": {
     "homePage": "Home page",
