rtl stylefix language switcher direction is now controlled by i18n - still needs work

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -27,6 +27,11 @@
       "feedback": "feedback",
       "help": "help",
       "logout": "logout"
+    },
+    "languages": {
+      "persian": "persian",
+      "english": "english",
+      "changeLanguage": "change language"
     }
   }
 }
