--- a/src/locales/fa/translation.json
+++ b/src/locales/fa/translation.json
@@ -22,7 +22,7 @@
   },
   "topBar": {
     "userDropDown": {
-      "myProfile": "پر.فایل من",
+      "myProfile": "پروفایل من",
       "settings": "تنظیمات",
       "feedback": "بازخورد",
       "help": "راهنما",
