404 page translation single routes constant for dashboard removed unused state for selected item

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -3,6 +3,12 @@
     "siteName": "Dashboard Project",
     "footerText": "Footer Text"
   },
+  "errorPages": {
+    "404": {
+      "title": "4😢4",
+      "subTitle": "Page not found."
+    }
+  },
   "authPage": {
     "header": "DASHBOARD",
     "rememberCheckBox": "remember me",
