--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,17 +4,19 @@
     "footerText": "Footer Text"
   },
   "authPage": {
-    "header": "DASHBOARD",
-    "rememberCheckBox": "remember me",
-    "signIn": "Sign In",
-    "help": "Help text",
-    "facebook": "Login with facebook",
-    "google": "Login with google",
-    "auth0": "Login with auth0",
-    "forgotPass": "restore password",
-    "createAcc": "create a new accout",
-    "username": "username",
-    "password": "password"
+    "login": {
+      "pageTitle": "Login",
+      "rememberCheckBox": "remember me",
+      "signIn": "Sign In",
+      "help": "Help text",
+      "facebook": "Login with facebook",
+      "google": "Login with google",
+      "auth0": "Login with auth0",
+      "forgotPass": "restore password",
+      "createAcc": "create a new accout",
+      "username": "username",
+      "password": "password"
+    }
   },
   "pages": {
     "homePage": "Home page",
