--- a/src/locales/fa/translation.json
+++ b/src/locales/fa/translation.json
@@ -3,18 +3,29 @@
     "siteName": "پروژه داشبرد",
     "footerText": "متن فوتر"
   },
+  "errorPages": {
+    "404": {
+      "title": "4😢4",
+      "subTitle": "صفحه مورد نظر یافت نشد!"
+    }
+  },
   "authPage": {
-    "header": "داشبرد",
-    "rememberCheckBox": "من را به خاطر بسپار",
-    "signIn": "ورود",
-    "help": "متن راهنما",
-    "facebook": "ورود با فیس بوک",
-    "google": "ورود با گوگل",
-    "auth0": "ورود با auth0",
-    "forgotPass": "بازیابی پسورد",
-    "createAcc": "ایجاد اکانت جدید",
-    "username": "نام کاربری",
-    "password": "پسورد"
+    "login": {
+      "pageTitle": "ورود به سیستم",
+      "pageDescription": "ورود به سیستم ",
+      "rememberCheckBox": "مرا به یاد بسپار",
+      "signIn": "ورود",
+      "help": "متن راهنما",
+      "facebook": "ورود با فیس بوک",
+      "google": "ورود با گوگل",
+      "auth0": "ورود با auth0",
+      "forgotPass": "بازیابی پسورد",
+      "createAcc": "ایجاد اکانت جدید",
+      "username": "نام کاربری",
+      "usernameError": "لطفا نام کاربری خود را وارد نمایید!",
+      "password": "کلمه عبور",
+      "passwordError": "لطفا کلمه عبور خود را وارد نمایید!"
+    }
   },
   "pages": {
     "homePage": "صفحه اصلی",
@@ -24,9 +35,12 @@
     "userDropDown": {
       "myProfile": "پروفایل من",
       "settings": "تنظیمات",
-      "feedback": "بازخورد",
-      "help": "راهنما",
-      "logout": "خروج از سیستم"
+      "logout": "خروج"
+    },
+    "languages": {
+      "fa": "فارسی",
+      "en": "English",
+      "change": "تغییر زبان"
     }
   }
 }
