fixed Lottie animation new 404 page design

--- a/src/locales/fa/translation.json
+++ b/src/locales/fa/translation.json
@@ -5,7 +5,7 @@
   },
   "errorPages": {
     "404": {
-      "title": "4😢4",
+      "title": "404",
       "subTitle": "صفحه مورد نظر یافت نشد!"
     }
   },
