--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -64,7 +64,7 @@
   },
   "pages": {
     "homePage": "Home page",
-    "mailPage": "Mails"
+    "thirdPartyInsurance": "Third Party insurance"
   },
   "topBar": {
     "userDropDown": {
