--- a/src/locales/fa/translation.json
+++ b/src/locales/fa/translation.json
@@ -1,7 +1,10 @@
 {
   "global": {
     "siteName": "پروژه داشبرد",
-    "footerText": "متن فوتر"
+    "footerText": "طراحی شده توسط امید آسترکی",
+    "siteDesc": "توضیحات سایت",
+    "loading": "در حال بارگذاری...",
+    "rials": "ریال"
   },
   "errorPages": {
     "404": {
@@ -9,38 +12,316 @@
       "subTitle": "صفحه مورد نظر یافت نشد!"
     }
   },
+  "errorMessages": {
+    "global": {},
+    "auth": {
+      "undefined": "لطفا دسترسی اینترنت خود را برسی نمایید",
+      "notFound": "کاربر یافت نشد",
+      "wrongUsernameOrPassword": "لطفا نام کاربری یا کلمه عبور خود را برسی نمایید"
+    }
+  },
   "authPage": {
+    "shared": {
+      "username": "نام کاربری",
+      "usernameError": "لطفا نام کاربری را وارد نمایید!",
+      "password": "کلمه عبور",
+      "passwordError": "لطفا کلمه عبور را وارد نمایید!",
+      "or": "یا",
+      "loginSuccess": "با موفقیت وارد شدید!"
+    },
     "login": {
-      "pageTitle": "ورود به سیستم",
-      "pageDescription": "ورود به سیستم ",
+      "pageTitle": "ورود",
+      "pageDescription": "توضیحات صفحه",
       "rememberCheckBox": "مرا به یاد بسپار",
       "signIn": "ورود",
       "help": "متن راهنما",
       "facebook": "ورود با فیس بوک",
       "google": "ورود با گوگل",
-      "auth0": "ورود با auth0",
+      "auth0": "ورود با  auth0",
       "forgotPass": "بازیابی پسورد",
-      "createAcc": "ایجاد اکانت جدید",
-      "username": "نام کاربری",
-      "usernameError": "لطفا نام کاربری خود را وارد نمایید!",
-      "password": "کلمه عبور",
-      "passwordError": "لطفا کلمه عبور خود را وارد نمایید!"
+      "createAcc": "ایجاد اکانت جدید"
+    },
+    "forgotPass": {
+      "pageTitle": "بازیابی پسورد",
+      "pageDescription": "توضیحات صفحه",
+      "submitBtn": "بازیابی",
+      "help": "متن راهنما",
+      "login": "اکانت دارید؟ ازا اینجا وارد شوید!"
+    },
+    "register": {
+      "pageTitle": "ایجاد اکانت جدید",
+      "pageDescription": "توضیحات",
+      "firstName": "نام",
+      "firstNameError": "لطفا نام خود را وارد نمایید!",
+      "lastName": "نام خانوادگی",
+      "lastNameError": "لطفا نام خانوادگی خود را وارد نمایید!",
+      "email": "ایمیل",
+      "emailError": "لطفا ایمیل خود را وارد نمایید!",
+      "submitBtn": "ثبت نام",
+      "tos": "قوانین",
+      "help": "پیام راهنما",
+      "login": "اکانت از قبل دارید؟ از اینجا وارد شوید"
     }
   },
   "pages": {
-    "homePage": "صفحه اصلی",
-    "mailPage": "ایمیل ها"
+    "homePage": {
+      "title": "پنل مدیریت"
+    },
+    "thirdPartyInsurance": {
+      "title": "بیمه شخص ثالث",
+      "overViewTab": {
+        "title": "نمای کلی",
+        "submittedInsurances": "بیمه های ثبت شده",
+        "iranInsuranceCases": "بیمه ایران",
+        "kosarInsuranceCases": "بیمه کوثر",
+        "revenue": "درامد در 30 روز گذشته",
+        "iranInsuranceRevenue": "بیمه ایران",
+        "kosarInsuranceRevenue": "بیمه کوثر"
+      },
+      "dataTab": {
+        "title": "بیمه های ثبت شده",
+        "table": {
+          "headers": {
+            "bimeNumber": "شماره بیمه",
+            "Insurer": "بیمه گذار",
+            "startDate": "تاریخ شروع",
+            "endDate": "تاریخ پایان",
+            "price": "ارزش بیمه",
+            "actions": "عملیات ها"
+          },
+          "general": {
+            "found": "{items, plural, =0 {چیزی یافت نشد} =1 {یک عدد یافت شد} other {در مجموع # ایتم یافت شد.}}"
+          }
+        }
+      },
+      "newTab": {
+        "title": "بیمه جدید",
+        "form": {
+          "bimeNumber": {
+            "label": "شماره بیمه",
+            "emptyError": "لطفا شماره بیمه نامه را وارد نمایید!",
+            "invalidError": "ورودی یک شماره بیمه نامه معتبر نیست!"
+          },
+          "issuer": {
+            "label": "بیمه کننده",
+            "emptyError": "لطفا شرکت بیمه کننده را انتخاب نمایید!"
+          },
+          "startDate": {
+            "label": "تاریخ شروع بیمه",
+            "emptyError": "لطفا تاریخ شروع بیمه را انتخاب نمایید!",
+            "invalidError": "این یک تاریخ معتبر نیست!"
+          },
+          "endDate": {
+            "label": "تاریخ پایان بیمه نامه",
+            "emptyError": "لطفا تاریخ پایان بیمه را انتخاب نمایید!",
+            "invalidError": "این یک تاریخ معتبر نیست!"
+          },
+          "isCash": {
+            "label": "متد پرداخت",
+            "options": {
+              "cash": "نقد",
+              "Installments": "اقساط"
+            },
+            "emptyError": "لطفا یک گزینه را انتخاب نمایید!"
+          },
+          "fullAmount": {
+            "label": "قیمت کل",
+            "emptyError": "لطفا قیمت کل را تعیین کنید!",
+            "invalidError": "ورودی نا معتبر!"
+          },
+          "insurerId": {
+            "label": "بیمه گذار",
+            "emptyError": "لطفا بیمه گذار را انتخاب کنید!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "vehicleId": {
+            "label": "وسیله نقلیه",
+            "emptyError": "لطفا وسیله نقلیه را انتخاب کنید!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "attachment": {
+            "label": "پیوست",
+            "guide": "لطفا فایل را به این ناحیه برای اپلود بکشید",
+            "help": "فقط آخرین فایل آپلودی انتخاب میشود",
+            "emptyError": "لطفا فایل لازم را اپلود نمایید"
+          },
+          "submit": "ثبت بیمه"
+        }
+      }
+    },
+    "vehicle": {
+      "title": "Vehicles",
+      "overViewTab": {
+        "title": "OverView",
+        "submittedVehicles": "Submitted vehicles",
+        "revenue": "submitted vehicles in the past 30 days"
+      },
+      "dataTab": {
+        "title": "submitted vehicles",
+        "table": {
+          "headers": {
+            "insurer": "insurer",
+            "owner": "owner",
+            "engineNumber": "engine number",
+            "chassisNumber": "chassis number",
+            "plateNumber": "plate number",
+            "actions": "actions"
+          },
+          "general": {
+            "found": "{items, plural, =0 {nothing found, please check search criteria} =1 {found ONE Item} other {found # items in total.}}"
+          }
+        }
+      },
+      "newTab": {
+        "title": "new insurance",
+        "form": {
+          "insurer": {
+            "label": "Vehicle Insurer",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "owner": {
+            "label": "Owner",
+            "phName": "Name",
+            "phLName": "Last name",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "address": {
+            "label": "full address",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "engineNumber": {
+            "label": "engine Number",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "chassisNumber": {
+            "label": "chassis Number",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "plateNumber": {
+            "label": "plate Number",
+            "firstTwo": "11",
+            "letter": "الف",
+            "lastThree": "111",
+            "irNum": "11",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "attachment": {
+            "label": "attachment",
+            "guide": "Click or drag file to this area to upload",
+            "help": "Support for a single or bulk upload",
+            "emptyError": "please upload required files"
+          },
+          "submit": "Submit vehicle"
+        }
+      }
+    },
+    "users": {
+      "title": "Users",
+      "overViewTab": {
+        "title": "OverView",
+        "total": "registered users",
+        "past30Days": "registered users in the past 30 days"
+      },
+      "dataTab": {
+        "title": "Registered Users",
+        "table": {
+          "headers": {
+            "avatar": "avatar",
+            "fullName": "full name",
+            "role": "role",
+            "melliCode": "Melli code",
+            "actions": "actions"
+          },
+          "general": {
+            "found": "{items, plural, =0 {nothing found, please check search criteria} =1 {found ONE Item} other {found # users in total.}}"
+          }
+        },
+        "findOne": {
+          "title": "user details",
+          "elements": {
+            "firstName": "first name",
+            "lastName": "last name",
+            "role": "role",
+            "phone": "phone number",
+            "avatar": "avatar",
+            "melliCode": "Melli code",
+            "address": "address",
+            "melliCardScanFront": "melli card scan front",
+            "melliCardScanBack": "melli card scan back",
+            "payrollScan": "payroll scan"
+          }
+        }
+      },
+      "newTab": {
+        "title": "New User",
+        "form": {
+          "fullName": {
+            "label": "full name",
+            "fName": "first name",
+            "lName": "Last name",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "melliCode": {
+            "label": "Melli Code",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "phone": {
+            "label": "phone number",
+            "emptyError": "The input is not valid Bime Number!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "address": {
+            "label": "address",
+            "emptyError": "The input is not valid address!",
+            "invalidError": "The input is not valid address!"
+          },
+          "melliCardScanFront": {
+            "label": "melli card front",
+            "guide": "Click or drag file to this area to upload",
+            "help": "Support for a single or bulk upload",
+            "emptyError": "please upload required files"
+          },
+          "melliCardScanBack": {
+            "label": "melli card back",
+            "guide": "Click or drag file to this area to upload",
+            "help": "Support for a single or bulk upload",
+            "emptyError": "please upload required files"
+          },
+          "payrollScan": {
+            "label": "payroll",
+            "guide": "Click or drag file to this area to upload",
+            "help": "Support for a single or bulk upload",
+            "emptyError": "please upload required files"
+          },
+          "avatar": {
+            "label": "avatar",
+            "guide": "Click or drag file to this area to upload",
+            "help": "Support for a single or bulk upload",
+            "emptyError": "please upload required files"
+          },
+          "submit": "register user"
+        }
+      }
+    }
   },
   "topBar": {
     "userDropDown": {
-      "myProfile": "پروفایل من",
-      "settings": "تنظیمات",
-      "logout": "خروج"
+      "myProfile": "my profile",
+      "settings": "settings",
+      "logout": "logout"
     },
     "languages": {
       "fa": "فارسی",
       "en": "English",
-      "change": "تغییر زبان"
+      "change": "change language"
     }
   }
 }
