--- a/src/locales/fa/translation.json
+++ b/src/locales/fa/translation.json
@@ -67,6 +67,104 @@
     "homePage": {
       "title": "پنل مدیریت"
     },
+    "bodyInsurance": {
+      "title": "بیمه بدنه",
+      "overViewTab": {
+        "title": "نمای کلی",
+        "submittedInsurances": "بیمه های ثبت شده",
+        "iranInsuranceCases": "بیمه ایران",
+        "kosarInsuranceCases": "بیمه کوثر",
+        "revenue": "درامد در 30 روز گذشته",
+        "iranInsuranceRevenue": "بیمه ایران",
+        "kosarInsuranceRevenue": "بیمه کوثر"
+      },
+      "dataTab": {
+        "title": "بیمه های ثبت شده",
+        "table": {
+          "headers": {
+            "bimeNumber": "شماره بیمه",
+            "Insurer": "بیمه گذار",
+            "startDate": "تاریخ شروع",
+            "endDate": "تاریخ پایان",
+            "price": "ارزش بیمه",
+            "actions": "عملیات ها"
+          },
+          "general": {
+            "found": "{items, plural, =0 {چیزی یافت نشد} =1 {یک عدد یافت شد} other {در مجموع # ایتم یافت شد.}}"
+          }
+        },
+        "findOne": {
+          "title": "جزئیات بیمه",
+          "elements": {
+            "createdAt": "ایجاد شده در",
+            "insurer": "بیمه گذار",
+            "owner": "صاحب خودرو",
+            "address": "آدرس",
+            "engineNumber": "شماره موتور",
+            "chassisNumber": "شماره شاسی",
+            "startDate": "تاریخ شروع",
+            "endDate": "تاریخ پایان",
+            "value": "ارزش بیمه",
+            "isCash": "نحوه پرداخت",
+            "plate": "پلاک"
+          }
+        }
+      },
+      "newTab": {
+        "title": "بیمه جدید",
+        "form": {
+          "bimeNumber": {
+            "label": "شماره بیمه",
+            "emptyError": "لطفا شماره بیمه نامه را وارد نمایید!",
+            "invalidError": "ورودی یک شماره بیمه نامه معتبر نیست!"
+          },
+          "issuer": {
+            "label": "بیمه کننده",
+            "emptyError": "لطفا شرکت بیمه کننده را انتخاب نمایید!"
+          },
+          "startDate": {
+            "label": "تاریخ شروع بیمه",
+            "emptyError": "لطفا تاریخ شروع بیمه را انتخاب نمایید!",
+            "invalidError": "این یک تاریخ معتبر نیست!"
+          },
+          "endDate": {
+            "label": "تاریخ پایان بیمه نامه",
+            "emptyError": "لطفا تاریخ پایان بیمه را انتخاب نمایید!",
+            "invalidError": "این یک تاریخ معتبر نیست!"
+          },
+          "isCash": {
+            "label": "متد پرداخت",
+            "options": {
+              "cash": "نقد",
+              "Installments": "اقساط"
+            },
+            "emptyError": "لطفا یک گزینه را انتخاب نمایید!"
+          },
+          "fullAmount": {
+            "label": "قیمت کل",
+            "emptyError": "لطفا قیمت کل را تعیین کنید!",
+            "invalidError": "ورودی نا معتبر!"
+          },
+          "insurerId": {
+            "label": "بیمه گذار",
+            "emptyError": "لطفا بیمه گذار را انتخاب کنید!",
+            "invalidError": "مقدار وارد یک بیمه گذار معتبر نیست"
+          },
+          "vehicleId": {
+            "label": "وسیله نقلیه",
+            "emptyError": "لطفا وسیله نقلیه را انتخاب کنید!",
+            "invalidError": "The input is not valid Bime Number!"
+          },
+          "attachment": {
+            "label": "پیوست",
+            "guide": "لطفا فایل را به این ناحیه برای اپلود بکشید",
+            "help": "فقط آخرین فایل آپلودی انتخاب میشود",
+            "emptyError": "لطفا فایل لازم را اپلود نمایید"
+          },
+          "submit": "ثبت بیمه"
+        }
+      }
+    },
     "thirdPartyInsurance": {
       "title": "بیمه شخص ثالث",
       "overViewTab": {
@@ -132,7 +230,7 @@
           "insurerId": {
             "label": "بیمه گذار",
             "emptyError": "لطفا بیمه گذار را انتخاب کنید!",
-            "invalidError": "The input is not valid Bime Number!"
+            "invalidError": "مقدار وارد یک بیمه گذار معتبر نیست"
           },
           "vehicleId": {
             "label": "وسیله نقلیه",
@@ -150,178 +248,178 @@
       }
     },
     "vehicle": {
-      "title": "Vehicles",
+      "title": "خودرو ها",
       "overViewTab": {
-        "title": "OverView",
-        "submittedVehicles": "Submitted vehicles",
-        "revenue": "submitted vehicles in the past 30 days"
+        "title": "نمای کلی",
+        "submittedVehicles": "خودرو های ثبت شده",
+        "revenue": "خودرو های ثبت شده در 30 روز گذشته"
       },
       "dataTab": {
-        "title": "submitted vehicles",
+        "title": "خودرو های ثبت شده",
         "table": {
           "headers": {
-            "insurer": "insurer",
-            "owner": "owner",
-            "engineNumber": "engine number",
-            "chassisNumber": "chassis number",
-            "plateNumber": "plate number",
-            "actions": "actions"
+            "insurer": "بیمه گذار",
+            "owner": "صاحب خودرو",
+            "engineNumber": "شماره موتور",
+            "chassisNumber": "شماره شاسی",
+            "plateNumber": "شماره پلاک",
+            "actions": "فعالیت ها"
           },
           "general": {
-            "found": "{items, plural, =0 {nothing found, please check search criteria} =1 {found ONE Item} other {found # items in total.}}"
+            "found": "{items, plural, =0 {چیزی یافت نشد} =1 {یک عدد یافت شد} other {در مجموع # ایتم یافت شد.}}"
           }
         }
       },
       "newTab": {
-        "title": "new insurance",
+        "title": "بیمه جدید",
         "form": {
           "insurer": {
-            "label": "Vehicle Insurer",
-            "emptyError": "The input is not valid Bime Number!",
+            "label": "بیمه گذار",
+            "emptyError": "لطفا یک بیمه گذار انتخاب نمایید!",
             "invalidError": "The input is not valid Bime Number!"
           },
           "owner": {
-            "label": "Owner",
-            "phName": "Name",
-            "phLName": "Last name",
-            "emptyError": "The input is not valid Bime Number!",
+            "label": "صاحب خودرو",
+            "phName": "نام",
+            "phLName": "نام خانوادگی",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
             "invalidError": "The input is not valid Bime Number!"
           },
           "address": {
-            "label": "full address",
-            "emptyError": "The input is not valid Bime Number!",
+            "label": "آدرس کامل",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
             "invalidError": "The input is not valid Bime Number!"
           },
           "engineNumber": {
-            "label": "engine Number",
-            "emptyError": "The input is not valid Bime Number!",
+            "label": "شمار موتور",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
             "invalidError": "The input is not valid Bime Number!"
           },
           "chassisNumber": {
-            "label": "chassis Number",
-            "emptyError": "The input is not valid Bime Number!",
+            "label": "شماره شاسی",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
             "invalidError": "The input is not valid Bime Number!"
           },
           "plateNumber": {
-            "label": "plate Number",
+            "label": "شماره پلاک",
             "firstTwo": "11",
             "letter": "الف",
             "lastThree": "111",
             "irNum": "11",
-            "emptyError": "The input is not valid Bime Number!",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
             "invalidError": "The input is not valid Bime Number!"
           },
           "attachment": {
-            "label": "attachment",
-            "guide": "Click or drag file to this area to upload",
-            "help": "Support for a single or bulk upload",
-            "emptyError": "please upload required files"
+            "label": "پیوست",
+            "guide": "بر روی این ناحیه کلیک کنید یا فایل ها را برای آپلود بکشید",
+            "help": "فقط آخرین فایل به سرور ارسال می شود.",
+            "emptyError": "لطفا فایل مورد نظر را اپلود نمایید"
           },
-          "submit": "Submit vehicle"
+          "submit": "ثبت خودرو"
         }
       }
     },
     "users": {
-      "title": "Users",
+      "title": "کاربران",
       "overViewTab": {
-        "title": "OverView",
-        "total": "registered users",
-        "past30Days": "registered users in the past 30 days"
+        "title": "نمای کلی",
+        "total": "کابران ثب نام شده",
+        "past30Days": "کاربران قبت شده در 30 روز گذشته"
       },
       "dataTab": {
-        "title": "Registered Users",
+        "title": "کاربران ثبت شده",
         "table": {
           "headers": {
-            "avatar": "avatar",
-            "fullName": "full name",
-            "role": "role",
-            "melliCode": "Melli code",
-            "actions": "actions"
+            "avatar": "تصویر",
+            "fullName": "نام کامل",
+            "role": "نقش",
+            "melliCode": "کد ملی",
+            "actions": "فعالیت ها"
           },
           "general": {
-            "found": "{items, plural, =0 {nothing found, please check search criteria} =1 {found ONE Item} other {found # users in total.}}"
+            "found": "{items, plural, =0 {چیزی یافت نشد} =1 {یک عدد یافت شد} other {در مجموع # ایتم یافت شد.}}"
           }
         },
         "findOne": {
-          "title": "user details",
+          "title": "جزئیات کاربر",
           "elements": {
-            "firstName": "first name",
-            "lastName": "last name",
-            "role": "role",
-            "phone": "phone number",
-            "avatar": "avatar",
-            "melliCode": "Melli code",
-            "address": "address",
-            "melliCardScanFront": "melli card scan front",
-            "melliCardScanBack": "melli card scan back",
-            "payrollScan": "payroll scan"
+            "firstName": "نام",
+            "lastName": "نام خانوادگی",
+            "role": "نقش",
+            "phone": "شماره موبایل",
+            "avatar": "تصویر",
+            "melliCode": "کد ملی",
+            "address": "آدرس",
+            "melliCardScanFront": "اسکن کارت ملی - جلو",
+            "melliCardScanBack": "اسکن کارت ملی - پشت",
+            "payrollScan": "اسکن فیش حقوقی"
           }
         }
       },
       "newTab": {
-        "title": "New User",
+        "title": "کاربر جدید",
         "form": {
           "fullName": {
-            "label": "full name",
-            "fName": "first name",
-            "lName": "Last name",
-            "emptyError": "The input is not valid Bime Number!",
+            "label": "نام کامل",
+            "fName": "نام",
+            "lName": "نام خانوادگی",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
             "invalidError": "The input is not valid Bime Number!"
           },
           "melliCode": {
-            "label": "Melli Code",
-            "emptyError": "The input is not valid Bime Number!",
-            "invalidError": "The input is not valid Bime Number!"
+            "label": "کد ملی",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
+            "invalidError": "یک کد ملی معتبر وارد نمایید!"
           },
           "phone": {
-            "label": "phone number",
-            "emptyError": "The input is not valid Bime Number!",
-            "invalidError": "The input is not valid Bime Number!"
+            "label": "شماره موبایل",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
+            "invalidError": "یک شماره موبایل معتبر وارد نمایید!"
           },
           "address": {
-            "label": "address",
-            "emptyError": "The input is not valid address!",
+            "label": "آدرس",
+            "emptyError": "این فیلد نمی تواند خالی باشد!",
             "invalidError": "The input is not valid address!"
           },
           "melliCardScanFront": {
-            "label": "melli card front",
-            "guide": "Click or drag file to this area to upload",
-            "help": "Support for a single or bulk upload",
-            "emptyError": "please upload required files"
+            "label": "کارت ملی - جلو",
+            "guide": "بر روی این ناحیه کلیک کنید یا فایل ها را برای آپلود بکشید",
+            "help": "فقط آخرین فایل به سرور ارسال می شود.",
+            "emptyError": "لطفا فایل مورد نظر را اپلود نمایید"
           },
           "melliCardScanBack": {
-            "label": "melli card back",
-            "guide": "Click or drag file to this area to upload",
-            "help": "Support for a single or bulk upload",
-            "emptyError": "please upload required files"
+            "label": "کارت ملی - پشت",
+            "guide": "بر روی این ناحیه کلیک کنید یا فایل ها را برای آپلود بکشید",
+            "help": "فقط آخرین فایل به سرور ارسال می شود.",
+            "emptyError": "لطفا فایل مورد نظر را اپلود نمایید"
           },
           "payrollScan": {
-            "label": "payroll",
-            "guide": "Click or drag file to this area to upload",
-            "help": "Support for a single or bulk upload",
-            "emptyError": "please upload required files"
+            "label": "فیش حقوقی",
+            "guide": "بر روی این ناحیه کلیک کنید یا فایل ها را برای آپلود بکشید",
+            "help": "فقط آخرین فایل به سرور ارسال می شود.",
+            "emptyError": "لطفا فایل مورد نظر را اپلود نمایید"
           },
           "avatar": {
-            "label": "avatar",
-            "guide": "Click or drag file to this area to upload",
-            "help": "Support for a single or bulk upload",
-            "emptyError": "please upload required files"
+            "label": "تصویر",
+            "guide": "بر روی این ناحیه کلیک کنید یا فایل ها را برای آپلود بکشید",
+            "help": "فقط آخرین فایل به سرور ارسال می شود.",
+            "emptyError": "لطفا فایل مورد نظر را اپلود نمایید"
           },
-          "submit": "register user"
+          "submit": "ثبت نام کاربر"
         }
       }
     }
   },
   "topBar": {
     "userDropDown": {
-      "myProfile": "my profile",
-      "settings": "settings",
-      "logout": "logout"
+      "myProfile": "پروفایل من",
+      "settings": "تنظیمات",
+      "logout": "خروج"
     },
     "languages": {
       "fa": "فارسی",
       "en": "English",
-      "change": "change language"
+      "change": "زبان خود را انتخاب کنید"
     }
   }
 }
